We created the structure

--- a/index.html
+++ b/index.html
@@ -8,61 +8,95 @@
 </head>
 
 <body>
-  <img src= 'http://www.placecage.com/c/1500/250' alt= 'Picture of Nicolas Cage Screaming'>
-  <img src= 'http://www.placecage.com/c/50/50' alt= 'Top Left Head Shot'>
-  <h1>CAGE BUDDIES</h1>
-  <caption>An Iron Yard joint since 2016</caption>
+
+  <section class='top-heading'>
+    <img src= 'http://www.placecage.com/c/50/50' alt= 'Top Left Head Shot'>
+
+    <h1>CAGE BUDDIES</h1>
+    <p>An Iron Yard joint since 2016</p>
+  </section>
 
   <nav>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Search</li>
+      <li>HOME</li>
+      <li>ABOUT</li>
+      <li>SEARCH</li>
     </ul>
   </nav>
 
-  <h2>Nick Cage: Great Actor or the Greatest Actor</h2>
-  <caption>Nikki Caje</caption>
-  <caption>on Oct 13, 2016</caption>
+  <main>
 
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lorem nulla, in placerat risus pharetra sit amet. Phasellus magna sem, gravida a dapibus ut, blandit sed risus. Mauris elementum auctor auctor. Pellentesque ultrices enim enim, eu placerat neque porttitor vitae. Ut commodo lorem et urna aliquam interdum. Fusce fringilla orci vel hendrerit hendrerit. In hac habitasse platea dictumst. Vivamus placerat nulla arcu, quis convallis purus ultricies non. Etiam condimentum tempor aliquam. Donec aliquet ipsum lacus, sit amet sollicitudin velit laoreet ullamcorper. Nullam fringilla ipsum vitae erat euismod, id condimentum tellus sagittis. Quisque sed leo lorem. Integer sem purus, congue quis dictum non, elementum at augue.
-  </p>
+    <!-- RightSide Section -->
+    <section class='sidebar'>
+      <img src='http://www.placecage.com/c/70/70' alt='second headshot of Nick Cage' id='second-headshot'>
 
-  <p>
-    Nulla facilisi. Suspendisse sed ultricies quam. Maecenas dui odio, iaculis in pulvinar at, molestie sed magna. Aenean ut nibh quis felis blandit vulputate. Duis facilisis ligula id urna tincidunt laoreet. Fusce lacus lacus, eleifend non ultrices vel, eleifend at est. Mauris diam risus, porta sit amet purus sit amet, sollicitudin tempor orci. Proin ullamcorper eu odio ac accumsan. Sed non pellentesque lacus, vitae facilisis orci. Nunc bibendum lobortis augue, eleifend venenatis dui tempor vel. Mauris elementum vulputate orci sit amet finibus. Nunc pellentesque, lectus sollicitudin aliquet ultricies, velit enim viverra elit, in mattis eros risus quis erat. Aliquam mattis eros libero, aliquam euismod sem vulputate eu. Suspendisse volutpat orci ac eros cursus, id interdum justo ultricies. Curabitur dignissim lacus ac leo elementum porta.
-  </p>
+      <h6> Nikki Caje </h6>
+        <p> Great author, or greatest author? </p>
+        <img src='http://www.placecage.com/c/255/200' alt='Nick Cage in super hero costume'>
+          <a href='#'>About this ad</a>
+      <h5> Friends of Cage </h5>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Integer non libero enim. Proin aliquam nulla ipsum, ac semper dolor efficitur vitae.
+        </p>
+      <section class='fivepics'>
+        <img src='http://www.placecage.com/c/27/27' alt='mini pic of Nick Cage 1'>
+        <img src='http://www.placecage.com/c/27/26' alt='mini pic of Nick Cage 2'>
+        <img src='http://www.placecage.com/c/26/27' alt='mini pic of Nick Cage 3'>
+        <img src='http://www.placecage.com/c/27/28' alt='mini pic of Nick Cage 4'>
+        <img src='http://www.placecage.com/c/28/27' alt='mini pic of Nick Cage 5'>
+      </section>
+    </section>
 
-  <p>
-    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Integer non libero enim. Proin aliquam nulla ipsum, ac semper dolor efficitur vitae. Morbi venenatis ligula sit amet tortor tincidunt, id molestie quam posuere. Aliquam sollicitudin placerat dolor. Nunc congue tempus aliquet. Ut ac elit est. In est neque, egestas sit amet nunc vel, tristique bibendum mauris. Praesent egestas auctor tortor nec mollis. Aenean gravida tristique vulputate. Mauris at hendrerit quam, ac interdum libero. Curabitur mattis elit tortor, ut viverra massa commodo nec. Nam efficitur porttitor consectetur. Suspendisse hendrerit feugiat auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-  </p>
+    <section class='author'>
+      <h2>Nick Cage: Great Actor or the Greatest Actor</h2>
+      <img src='http://www.placecage.com/c/30/30' alt='second headshot of Nick Cage'id='third-headshot'>
+      <p>Nikki Caje</p>
+      <p id='date'>on Oct 13, 2016</p>
+    </section>
 
-  <p>
-    Maecenas pellentesque, arcu eu dapibus porttitor, mauris nulla mattis purus, in posuere metus justo sed sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Aliquam sagittis fringilla justo id ultricies. Sed lorem tortor, porta sit amet porttitor a, condimentum non tellus. Fusce quis tempus ipsum. Pellentesque vitae augue eget ante dignissim commodo at luctus nibh. Phasellus nunc eros, tincidunt in erat et, rutrum imperdiet ante. Quisque eleifend tellus a tortor elementum auctor. Nunc pharetra nunc lorem. Aenean sodales elementum metus et cursus.
-</p>
+    <section class='paragraph'>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lorem nulla, in placerat risus pharetra sit amet. Phasellus magna sem, gravida a dapibus ut, blandit sed risus. Mauris elementum auctor auctor. Pellentesque ultrices enim enim, eu placerat neque porttitor vitae. Ut commodo lorem et urna aliquam interdum. Fusce fringilla orci vel hendrerit hendrerit. In hac habitasse platea dictumst. Vivamus placerat nulla arcu, quis convallis purus ultricies non. Etiam condimentum tempor aliquam. Donec aliquet ipsum lacus, sit amet sollicitudin velit laoreet ullamcorper. Nullam fringilla ipsum vitae erat euismod, id condimentum tellus sagittis. Quisque sed leo lorem. Integer sem purus, congue quis dictum non, elementum at augue.
+      </p>
 
+      <p>
+        Nulla facilisi. Suspendisse sed ultricies quam. Maecenas dui odio, iaculis in pulvinar at, molestie sed magna. Aenean ut nibh quis felis blandit vulputate. Duis facilisis ligula id urna tincidunt laoreet. Fusce lacus lacus, eleifend non ultrices vel, eleifend at est. Mauris diam risus, porta sit amet purus sit amet, sollicitudin tempor orci. Proin ullamcorper eu odio ac accumsan. Sed non pellentesque lacus, vitae facilisis orci. Nunc bibendum lobortis augue, eleifend venenatis dui tempor vel. Mauris elementum vulputate orci sit amet finibus. Nunc pellentesque, lectus sollicitudin aliquet ultricies, velit enim viverra elit, in mattis eros risus quis erat. Aliquam mattis eros libero, aliquam euismod sem vulputate eu. Suspendisse volutpat orci ac eros cursus, id interdum justo ultricies. Curabitur dignissim lacus ac leo elementum porta.
+      </p>
+      <h3 id='answer'>Answer: The Greatest </h3>
 
+      <p>
+        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Integer non libero enim. Proin aliquam nulla ipsum, ac semper dolor efficitur vitae. Morbi venenatis ligula sit amet tortor tincidunt, id molestie quam posuere. Aliquam sollicitudin placerat dolor. Nunc congue tempus aliquet. Ut ac elit est. In est neque, egestas sit amet nunc vel, tristique bibendum mauris. Praesent egestas auctor tortor nec mollis. Aenean gravida tristique vulputate. Mauris at hendrerit quam, ac interdum libero. Curabitur mattis elit tortor, ut viverra massa commodo nec. Nam efficitur porttitor consectetur. Suspendisse hendrerit feugiat auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+      </p>
 
+      <p>
+        Maecenas pellentesque, arcu eu dapibus porttitor, mauris nulla mattis purus, in posuere metus justo sed sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Aliquam sagittis fringilla justo id ultricies. Sed lorem tortor, porta sit amet porttitor a, condimentum non tellus. Fusce quis tempus ipsum. Pellentesque vitae augue eget ante dignissim commodo at luctus nibh. Phasellus nunc eros, tincidunt in erat et, rutrum imperdiet ante. Quisque eleifend tellus a tortor elementum auctor. Nunc pharetra nunc lorem. Aenean sodales elementum metus et cursus.
+      </p>
 
+      <input type='submit' value='Share'>
+      <input type='submit' value='Comments'>
 
+    </section>
 
+  </main>
 
+  <footer class='footer'>
+        <h1> Other People We Like </h1>
+        <img src='http://www.stevensegallery.com/175/175' alt='other pic 1'>
+        <img src='http://www.fillmurray.com/g/175/175' alt='other pic 2'>
+        <img src='http://www.stevensegallery.com/174/175' alt='other pic 3'>
+        <img src='http://www.fillmurray.com/g/174/175' alt='other pic 4'>
+        <img src='http://www.stevensegallery.com/175/174' alt='other pic 5'>
 
+        <p>Cage buddies is not real, as much as we want it to be</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Search</li>
+            <li>The Iron Yard</li>
+          </ul>
+        </nav>
+  </footer>
 
 </body>
 
