We worked on the footer

--- a/index.html
+++ b/index.html
@@ -78,24 +78,26 @@
 
   </main>
 
-  <footer class='footer'>
+  <footer >
         <h1> Other People We Like </h1>
         <img src='http://www.stevensegallery.com/175/175' alt='other pic 1'>
         <img src='http://www.fillmurray.com/g/175/175' alt='other pic 2'>
         <img src='http://www.stevensegallery.com/174/175' alt='other pic 3'>
         <img src='http://www.fillmurray.com/g/174/175' alt='other pic 4'>
-        <img src='http://www.stevensegallery.com/175/174' alt='other pic 5'>
+        <img src='http://www.stevensegallery.com/175/174  ' alt='other pic 5'>
 
+        <section class='bottom'>
         <p>Cage buddies is not real, as much as we want it to be</p>
 
         <nav>
           <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Search</li>
-            <li>The Iron Yard</li>
+            <li><a href='#'>Home</a></li>
+            <li><a href='#'>About</a></li>
+            <li><a href='#'>Search</a></li>
+            <li>T<a href='#'>he Iron Yard</a></li>
           </ul>
         </nav>
+      </section>
   </footer>
 
 </body>
