--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
   <title> Cage Buddies </title>
   <meta name='descripton' content='Nicholas Cage fan page'>
   <link type='text/css' rel='stylesheet' href='style.css'>
+  <style>
+  @import url('https://fonts.googleapis.com/css?family=Six+Caps');
+  </style>
 </head>
 
 <body>
-
+  <header>
   <section class='top-heading'>
-    <img src= 'http://www.placecage.com/c/50/50' alt= 'Top Left Head Shot'>
-
-    <h1>CAGE BUDDIES</h1>
-    <p>An Iron Yard joint since 2016</p>
+      <img src= 'http://www.placecage.com/c/50/50' alt= 'Top Left Head Shot'>
+      <h1>CAGE BUDDIES</h1>
+      <p>An Iron Yard joint since 2016</p>
   </section>
 
-  <nav>
+  <nav class='navigation'>
     <ul>
       <li>HOME</li>
       <li>ABOUT</li>
       <li>SEARCH</li>
     </ul>
   </nav>
+</header>
 
   <main>
 
@@ -55,11 +58,11 @@
 
     <section class='paragraph'>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lorem nulla, in placerat risus pharetra sit amet. Phasellus magna sem, gravida a dapibus ut, blandit sed risus. Mauris elementum auctor auctor. Pellentesque ultrices enim enim, eu placerat neque porttitor vitae. Ut commodo lorem et urna aliquam interdum. Fusce fringilla orci vel hendrerit hendrerit. In hac habitasse platea dictumst. Vivamus placerat nulla arcu, quis convallis purus ultricies non. Etiam condimentum tempor aliquam. Donec aliquet ipsum lacus, sit amet sollicitudin velit laoreet ullamcorper. Nullam fringilla ipsum vitae erat euismod, id condimentum tellus sagittis. Quisque sed leo lorem. Integer sem purus, congue quis dictum non, elementum at augue.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lorem nulla, in placerat risus pharetra sit amet. Phasellus magna sem, gravida a dapibus ut, blandit sed risus. Mauris elementum auctor auctor. Pellentesque ultrices enim enim, eu placerat neque porttitor vitae. Ut commodo lorem et urna aliquam interdum. Fusce fringilla orci vel hendrerit hendrerit. In hac habitasse platea dictumst. Vivamus placerat nulla arcu, quis convallis purus ultricies non. Etiam condimentum tempor aliquam. Donec aliquet ipsum lacus, sit amet sollicitudin velit laoreet ullamcorper. Nullam fringilla ipsum vitae erat euismod, id condimentum tellus sagittis. Quisque sed leo lorem. Integer <a href='#'>sem purus</a>, congue quis dictum non, elementum at augue.
       </p>
 
       <p>
-        Nulla facilisi. Suspendisse sed ultricies quam. Maecenas dui odio, iaculis in pulvinar at, molestie sed magna. Aenean ut nibh quis felis blandit vulputate. Duis facilisis ligula id urna tincidunt laoreet. Fusce lacus lacus, eleifend non ultrices vel, eleifend at est. Mauris diam risus, porta sit amet purus sit amet, sollicitudin tempor orci. Proin ullamcorper eu odio ac accumsan. Sed non pellentesque lacus, vitae facilisis orci. Nunc bibendum lobortis augue, eleifend venenatis dui tempor vel. Mauris elementum vulputate orci sit amet finibus. Nunc pellentesque, lectus sollicitudin aliquet ultricies, velit enim viverra elit, in mattis eros risus quis erat. Aliquam mattis eros libero, aliquam euismod sem vulputate eu. Suspendisse volutpat orci ac eros cursus, id interdum justo ultricies. Curabitur dignissim lacus ac leo elementum porta.
+        Nulla facilisi. Suspendisse sed ultricies quam. Maecenas <a href='#'>dui odio</a>, iaculis in pulvinar at, molestie sed magna. Aenean ut nibh quis felis blandit vulputate. Duis facilisis ligula id urna tincidunt laoreet. Fusce lacus lacus, eleifend non ultrices vel, eleifend at est. Mauris diam risus, porta sit amet purus sit amet, sollicitudin tempor orci. Proin ullamcorper eu odio ac accumsan. Sed non pellentesque lacus, vitae facilisis orci. Nunc bibendum lobortis augue, eleifend venenatis dui tempor vel. Mauris elementum vulputate orci sit amet finibus. Nunc pellentesque, lectus sollicitudin aliquet ultricies, velit enim viverra elit, in mattis eros risus quis erat. Aliquam mattis eros libero, aliquam euismod sem vulputate eu. Suspendisse volutpat orci ac eros cursus, id interdum justo ultricies. Curabitur dignissim lacus ac leo elementum porta.
       </p>
       <h3 id='answer'>Answer: The Greatest </h3>
 
@@ -94,7 +97,7 @@
             <li><a href='#'>Home</a></li>
             <li><a href='#'>About</a></li>
             <li><a href='#'>Search</a></li>
-            <li>T<a href='#'>he Iron Yard</a></li>
+            <li><a href='#'>The Iron Yard</a></li>
           </ul>
         </nav>
       </section>
